src/main/gen/github/enotvtapke/cobolsyntax/psi/parser/CobolParser.java
// This is a generated file. Not intended for manual editing.
package github.enotvtapke.cobolsyntax.psi.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static github.enotvtapke.cobolsyntax.psi.CobolTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CobolParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return cobolFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // ACCEPT IDENTIFIER DOT
  public static boolean acceptStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "acceptStatement")) return false;
    if (!nextTokenIs(builder_, ACCEPT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, ACCEPT, IDENTIFIER, DOT);
    exit_section_(builder_, marker_, ACCEPT_STATEMENT, result_);
    return result_;
  }

  /* ********************************************************** */
  // ADD arithmeticOperand TO IDENTIFIER givingClause? DOT
  public static boolean addStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "addStatement")) return false;
    if (!nextTokenIs(builder_, ADD)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ADD);
    result_ = result_ && arithmeticOperand(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, TO, IDENTIFIER);
    result_ = result_ && addStatement_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, ADD_STATEMENT, result_);
    return result_;
  }

  // givingClause?
  private static boolean addStatement_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "addStatement_4")) return false;
    givingClause(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // multiplicativeExpression ((PLUS | MINUS) multiplicativeExpression)*
  public static boolean additiveExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additiveExpression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ADDITIVE_EXPRESSION, "<additive expression>");
    result_ = multiplicativeExpression(builder_, level_ + 1);
    result_ = result_ && additiveExpression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ((PLUS | MINUS) multiplicativeExpression)*
  private static boolean additiveExpression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additiveExpression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!additiveExpression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "additiveExpression_1", pos_)) break;
    }
    return true;
  }

  // (PLUS | MINUS) multiplicativeExpression
  private static boolean additiveExpression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additiveExpression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = additiveExpression_1_0_0(builder_, level_ + 1);
    result_ = result_ && multiplicativeExpression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // PLUS | MINUS
  private static boolean additiveExpression_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additiveExpression_1_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    return result_;
  }

  /* ********************************************************** */
  // additiveExpression
  public static boolean arithmeticExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmeticExpression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARITHMETIC_EXPRESSION, "<arithmetic expression>");
    result_ = additiveExpression(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // INTEGER | IDENTIFIER
  public static boolean arithmeticOperand(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmeticOperand")) return false;
    if (!nextTokenIs(builder_, "<arithmetic operand>", IDENTIFIER, INTEGER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARITHMETIC_OPERAND, "<arithmetic operand>");
    result_ = consumeToken(builder_, INTEGER);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // identificationDivision dataDivision? procedureDivision?
  static boolean cobolFile(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cobolFile")) return false;
    if (!nextTokenIs(builder_, IDENTIFICATION)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identificationDivision(builder_, level_ + 1);
    result_ = result_ && cobolFile_1(builder_, level_ + 1);
    result_ = result_ && cobolFile_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // dataDivision?
  private static boolean cobolFile_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cobolFile_1")) return false;
    dataDivision(builder_, level_ + 1);
    return true;
  }

  // procedureDivision?
  private static boolean cobolFile_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cobolFile_2")) return false;
    procedureDivision(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // COMPUTE IDENTIFIER EQ arithmeticExpression DOT
  public static boolean computeStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "computeStatement")) return false;
    if (!nextTokenIs(builder_, COMPUTE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, COMPUTE, IDENTIFIER, EQ);
    result_ = result_ && arithmeticExpression(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, COMPUTE_STATEMENT, result_);
    return result_;
  }

  /* ********************************************************** */
  // arithmeticExpression EQ arithmeticExpression
  public static boolean condition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "condition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CONDITION, "<condition>");
    result_ = arithmeticExpression(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, EQ);
    result_ = result_ && arithmeticExpression(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // DATA DIVISION DOT workingStorageSection?
  public static boolean dataDivision(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDivision")) return false;
    if (!nextTokenIs(builder_, DATA)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DATA, DIVISION, DOT);
    result_ = result_ && dataDivision_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, DATA_DIVISION, result_);
    return result_;
  }

  // workingStorageSection?
  private static boolean dataDivision_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDivision_3")) return false;
    workingStorageSection(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // levelNumber dataName pictureClause valueClause? DOT
  public static boolean dataItemDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataItemDefinition")) return false;
    if (!nextTokenIs(builder_, INTEGER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = levelNumber(builder_, level_ + 1);
    result_ = result_ && dataName(builder_, level_ + 1);
    result_ = result_ && pictureClause(builder_, level_ + 1);
    result_ = result_ && dataItemDefinition_3(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, DATA_ITEM_DEFINITION, result_);
    return result_;
  }

  // valueClause?
  private static boolean dataItemDefinition_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataItemDefinition_3")) return false;
    valueClause(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean dataName(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataName")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, DATA_NAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // DISPLAY (IDENTIFIER | literal)+ DOT
  public static boolean displayStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "displayStatement")) return false;
    if (!nextTokenIs(builder_, DISPLAY)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, DISPLAY);
    result_ = result_ && displayStatement_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, DISPLAY_STATEMENT, result_);
    return result_;
  }

  // (IDENTIFIER | literal)+
  private static boolean displayStatement_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "displayStatement_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = displayStatement_1_0(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!displayStatement_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "displayStatement_1", pos_)) break;
    }
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // IDENTIFIER | literal
  private static boolean displayStatement_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "displayStatement_1_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = literal(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // DIVIDE arithmeticOperand BY arithmeticOperand givingClause? DOT
  public static boolean divideStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "divideStatement")) return false;
    if (!nextTokenIs(builder_, DIVIDE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, DIVIDE);
    result_ = result_ && arithmeticOperand(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, BY);
    result_ = result_ && arithmeticOperand(builder_, level_ + 1);
    result_ = result_ && divideStatement_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, DIVIDE_STATEMENT, result_);
    return result_;
  }

  // givingClause?
  private static boolean divideStatement_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "divideStatement_4")) return false;
    givingClause(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // GIVING IDENTIFIER
  public static boolean givingClause(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "givingClause")) return false;
    if (!nextTokenIs(builder_, GIVING)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, GIVING, IDENTIFIER);
    exit_section_(builder_, marker_, GIVING_CLAUSE, result_);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFICATION DIVISION DOT programIdParagraph
  public static boolean identificationDivision(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identificationDivision")) return false;
    if (!nextTokenIs(builder_, IDENTIFICATION)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, IDENTIFICATION, DIVISION, DOT);
    result_ = result_ && programIdParagraph(builder_, level_ + 1);
    exit_section_(builder_, marker_, IDENTIFICATION_DIVISION, result_);
    return result_;
  }

  /* ********************************************************** */
  // INTEGER
  public static boolean levelNumber(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "levelNumber")) return false;
    if (!nextTokenIs(builder_, INTEGER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, INTEGER);
    exit_section_(builder_, marker_, LEVEL_NUMBER, result_);
    return result_;
  }

  /* ********************************************************** */
  // INTEGER | STRING
  public static boolean literal(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "literal")) return false;
    if (!nextTokenIs(builder_, "<literal>", INTEGER, STRING)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, LITERAL, "<literal>");
    result_ = consumeToken(builder_, INTEGER);
    if (!result_) result_ = consumeToken(builder_, STRING);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // MOVE (IDENTIFIER | literal) TO IDENTIFIER DOT
  public static boolean moveStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "moveStatement")) return false;
    if (!nextTokenIs(builder_, MOVE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, MOVE);
    result_ = result_ && moveStatement_1(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, TO, IDENTIFIER, DOT);
    exit_section_(builder_, marker_, MOVE_STATEMENT, result_);
    return result_;
  }

  // IDENTIFIER | literal
  private static boolean moveStatement_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "moveStatement_1")) return false;
    boolean result_;
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = literal(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // powerExpression ((STAR | SLASH) powerExpression)*
  public static boolean multiplicativeExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "multiplicativeExpression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, MULTIPLICATIVE_EXPRESSION, "<multiplicative expression>");
    result_ = powerExpression(builder_, level_ + 1);
    result_ = result_ && multiplicativeExpression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ((STAR | SLASH) powerExpression)*
  private static boolean multiplicativeExpression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "multiplicativeExpression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!multiplicativeExpression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "multiplicativeExpression_1", pos_)) break;
    }
    return true;
  }

  // (STAR | SLASH) powerExpression
  private static boolean multiplicativeExpression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "multiplicativeExpression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = multiplicativeExpression_1_0_0(builder_, level_ + 1);
    result_ = result_ && powerExpression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // STAR | SLASH
  private static boolean multiplicativeExpression_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "multiplicativeExpression_1_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, STAR);
    if (!result_) result_ = consumeToken(builder_, SLASH);
    return result_;
  }

  /* ********************************************************** */
  // MULTIPLY arithmeticOperand BY IDENTIFIER givingClause? DOT
  public static boolean multiplyStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "multiplyStatement")) return false;
    if (!nextTokenIs(builder_, MULTIPLY)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, MULTIPLY);
    result_ = result_ && arithmeticOperand(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, BY, IDENTIFIER);
    result_ = result_ && multiplyStatement_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, MULTIPLY_STATEMENT, result_);
    return result_;
  }

  // givingClause?
  private static boolean multiplyStatement_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "multiplyStatement_4")) return false;
    givingClause(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // paragraphName DOT statement*
  public static boolean paragraph(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "paragraph")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = paragraphName(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    result_ = result_ && paragraph_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, PARAGRAPH, result_);
    return result_;
  }

  // statement*
  private static boolean paragraph_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "paragraph_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!statement(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "paragraph_2", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean paragraphName(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "paragraphName")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, PARAGRAPH_NAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // PERFORM IDENTIFIER varyingClause? DOT?
  public static boolean performStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "performStatement")) return false;
    if (!nextTokenIs(builder_, PERFORM)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, PERFORM, IDENTIFIER);
    result_ = result_ && performStatement_2(builder_, level_ + 1);
    result_ = result_ && performStatement_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, PERFORM_STATEMENT, result_);
    return result_;
  }

  // varyingClause?
  private static boolean performStatement_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "performStatement_2")) return false;
    varyingClause(builder_, level_ + 1);
    return true;
  }

  // DOT?
  private static boolean performStatement_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "performStatement_3")) return false;
    consumeToken(builder_, DOT);
    return true;
  }

  /* ********************************************************** */
  // PIC IS? PICTURE_STRING
  public static boolean pictureClause(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "pictureClause")) return false;
    if (!nextTokenIs(builder_, PIC)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, PIC);
    result_ = result_ && pictureClause_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, PICTURE_STRING);
    exit_section_(builder_, marker_, PICTURE_CLAUSE, result_);
    return result_;
  }

  // IS?
  private static boolean pictureClause_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "pictureClause_1")) return false;
    consumeToken(builder_, IS);
    return true;
  }

  /* ********************************************************** */
  // unaryExpression (POWER unaryExpression)*
  public static boolean powerExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "powerExpression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, POWER_EXPRESSION, "<power expression>");
    result_ = unaryExpression(builder_, level_ + 1);
    result_ = result_ && powerExpression_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (POWER unaryExpression)*
  private static boolean powerExpression_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "powerExpression_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!powerExpression_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "powerExpression_1", pos_)) break;
    }
    return true;
  }

  // POWER unaryExpression
  private static boolean powerExpression_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "powerExpression_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, POWER);
    result_ = result_ && unaryExpression(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // INTEGER | IDENTIFIER | LPAREN arithmeticExpression RPAREN
  public static boolean primaryExpression(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "primaryExpression")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, PRIMARY_EXPRESSION, "<primary expression>");
    result_ = consumeToken(builder_, INTEGER);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = primaryExpression_2(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // LPAREN arithmeticExpression RPAREN
  private static boolean primaryExpression_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "primaryExpression_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && arithmeticExpression(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // PROCEDURE DIVISION DOT paragraph*
  public static boolean procedureDivision(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "procedureDivision")) return false;
    if (!nextTokenIs(builder_, PROCEDURE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, PROCEDURE, DIVISION, DOT);
    result_ = result_ && procedureDivision_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, PROCEDURE_DIVISION, result_);
    return result_;
  }

  // paragraph*
  private static boolean procedureDivision_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "procedureDivision_3")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!paragraph(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "procedureDivision_3", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // PROGRAM_ID DOT IDENTIFIER DOT
  public static boolean programIdParagraph(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "programIdParagraph")) return false;
    if (!nextTokenIs(builder_, PROGRAM_ID)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, PROGRAM_ID, DOT, IDENTIFIER, DOT);
    exit_section_(builder_, marker_, PROGRAM_ID_PARAGRAPH, result_);
    return result_;
  }

  /* ********************************************************** */
  // performStatement | stopStatement | displayStatement | computeStatement | addStatement | subtractStatement | multiplyStatement | divideStatement | moveStatement | acceptStatement
  public static boolean statement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "statement")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, STATEMENT, "<statement>");
    result_ = performStatement(builder_, level_ + 1);
    if (!result_) result_ = stopStatement(builder_, level_ + 1);
    if (!result_) result_ = displayStatement(builder_, level_ + 1);
    if (!result_) result_ = computeStatement(builder_, level_ + 1);
    if (!result_) result_ = addStatement(builder_, level_ + 1);
    if (!result_) result_ = subtractStatement(builder_, level_ + 1);
    if (!result_) result_ = multiplyStatement(builder_, level_ + 1);
    if (!result_) result_ = divideStatement(builder_, level_ + 1);
    if (!result_) result_ = moveStatement(builder_, level_ + 1);
    if (!result_) result_ = acceptStatement(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // STOP RUN DOT
  public static boolean stopStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "stopStatement")) return false;
    if (!nextTokenIs(builder_, STOP)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, STOP, RUN, DOT);
    exit_section_(builder_, marker_, STOP_STATEMENT, result_);
    return result_;
  }

  /* ********************************************************** */
  // SUBTRACT arithmeticOperand FROM IDENTIFIER givingClause? DOT
  public static boolean subtractStatement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "subtractStatement")) return false;
    if (!nextTokenIs(builder_, SUBTRACT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, SUBTRACT);
    result_ = result_ && arithmeticOperand(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, FROM, IDENTIFIER);
    result_ = result_ && subtractStatement_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, SUBTRACT_STATEMENT, result_);
    return result_;
  }

  // givingClause?
  private static boolean subtractStatement_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "subtractStatement_4")) return false;
    givingClause(builder_, level_ + 1);
    return true;
  }
